Add chicken tikka masala recipe
Added chicken tikka masala recipe page with all ingredients and steps.
Also added picture that is included on the recipe page. Link to recipe
was added to home page and a linkback to the home page from the recipe.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/chicken-tikka-masala.html">Chicken Tikka Masala</a>
     </body>
 </html>
