Update chicken tikka masala recipe
Committed unsaved details of the recipe including ingredients, steps
and image.

--- a/recipes/chicken-tikka-masala.html
+++ b/recipes/chicken-tikka-masala.html
@@ -6,7 +6,48 @@
     </head>
 
     <body>
-        <h1>Chicken Tikka Masala</h1>
         <a href="../index.html">Home</a>
+        <h1>Chicken Tikka Masala</h1>
+        <img src="../pics/chicken-tikka-masala.webp" alt="A plate of chicken tikka masala over rice" height="400" width="300">
+        <h3>Description</h3>
+        <p>Chicken tikka masala is a dish consisting of roasted marinated chopped chicken (chicken tikka) in a spiced sauce (masala). The sauce is usually creamy and orange-coloured. The origins of the dish are debated, with many believing it was created by South Asian cooks in Britain. It is offered at restaurants around the world and is similar to butter chicken.</p>
+        <h3>Ingredients</h3>
+        <h4>Chicken</h4>
+        <ul>
+            <li>1-1/2 pounds skinless, boneless chicken thighs</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>2 teaspoons kosher salt</li>
+            <li>2 teaspoons garam masala</li>
+            <li>2 teaspoons ground cumin</li>
+            <li>1 teaspoon ground coriander</li>
+            <li>1 teaspoon smoked paprika</li>
+            <li>1 teaspoon ground turmeric</li>
+            <li>1/2 teaspoon ground black pepper</li>
+            <li>1/4 teaspoon cayenne pepper</li>
+            <li>1/8 teaspoon ground cardamom</li>
+            <li>2 tablespoons clarified butter (ghee), or more as needed</li>
+        </ul>
+        <h4>Tikka Masala Sauce</h4>
+        <ul>
+            <li>1 onion, chopped</li>
+            <li>1/4 cup tomato paste</li>
+            <li>4 cloves garlic, finely grated</li>
+            <li>1 tablespoon finely grated ginger, or more to taste</li>
+            <li>1 cup crushed tomatoes</li>
+            <li>1 (13 ounce) can coconut milk</li>
+            <li>1/2 cup chicken broth, or as needed</li>
+            <li>2 tablespoons chopped fresh cilantro</li>
+            <li>1/2 teaspoon red pepper flakes</li>
+            <li>salt and ground black pepper to taste</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Gather all ingredients. Place chicken in a bowl. Drizzle vegetable oil over chicken; toss to coat.</li>
+            <li>Whisk together salt, garam masala, cumin, coriander, paprika, turmeric, black pepper, cayenne pepper, and cardamom in a small bowl. Sprinkle over chicken and turn to coat evenly.</li>
+            <li>Melt clarified butter in a large, heavy skillet over high heat. Cook chicken thighs in hot butter until browned on all sides, 5 to 10 minutes. Transfer chicken to a plate. When cool enough to handle, cut chicken into bite-sized pieces.</li>
+            <li>Make Sauce: Place the skillet with chicken drippings over medium-high heat. Stir onion into the skillet; saute until onion softens and turns translucent, 5 to6 minutes. Stir in tomato paste and cook until paste caramelizes, about 5 minutes. Stir garlic and ginger into tomato-onion mixture; cook until fragrant, about 1 minute.</li>
+            <li>Pour crushed tomatoes into the skillet. Bring to a boil while scraping the browned bits of food off of the bottom of the skillet with a wooden spoon. Pour in coconut milk and chicken broth; bring to a simmer, reduce heat to medium-low, and cook, stirring occasionally, until flabors blend and sauce is slightly reduced, about 15 minutes.</li>
+            <li>Stir chicken and any accumulated juices into sauce. Add cilantro and red pepper flakes; bring to a simmer, reduce heat to medium-low, and cook until chicken is cooked through and tender, 10 to 15 minutes. Season with salt and black pepper.</li>
+        </ol>
     </body>
 </html>
