--- a/recipes/chicken-tikka-masala.html
+++ b/recipes/chicken-tikka-masala.html
@@ -8,7 +8,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Chicken Tikka Masala</h1>
-        <img src="../pics/chicken-tikka-masala.webp" alt="A plate of chicken tikka masala over rice" height="400" width="300">
+        <img src="../pics/chicken-tikka-masala.webp" alt="A plate of chicken tikka masala over rice" height="" width="600">
         <h3>Description</h3>
         <p>Chicken tikka masala is a dish consisting of roasted marinated chopped chicken (chicken tikka) in a spiced sauce (masala). The sauce is usually creamy and orange-coloured. The origins of the dish are debated, with many believing it was created by South Asian cooks in Britain. It is offered at restaurants around the world and is similar to butter chicken.</p>
         <h3>Ingredients</h3>
