Add hot chocolate recipe
Add the recipe for hot chocolate including ingredients, description,
and steps. Add necessary link from homepage and linkback from recipe.

--- a/recipes/dutch-babies.html
+++ b/recipes/dutch-babies.html
@@ -8,7 +8,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Dutch Babies</h1>
-        <img src="../pics/dutch-babies.webp" alt="Dutch babies in a cast iron pan covered in powdered sugar">
+        <img src="../pics/dutch-babies.webp" alt="Dutch babies in a cast iron pan covered in powdered sugar" height="" width="600">
         <h3>Description</h3>
         <p> Dutch baby pancake, sometimes called a German pancake, a Bismarck, a Dutch puff, Hooligan, or a Hootenanny, is a dish that is similar to a large Yorkshire pudding.</p>
         <p>Unlike most pancakes, Dutch babies are baked in the oven, rather than being fried. They are generally thicker than most pancakes and contain no chemical leavening ingredients such as baking powder.</p>
