Update index and hot-chocolate

--- a/recipes/hot-chocolate.html
+++ b/recipes/hot-chocolate.html
@@ -6,6 +6,25 @@
     </head>
 
     <body>
-        <a href="../"
+        <a href="../index.html">Home</a>
+        <h1>Hot Chocolate</h1>
+        <img src="../pics/hot-chocolate.jpg" alt="Steaming cup of hot chocolate covered in whipped cream and dark chocolate shavings" height="" width="600">
+        <h3>Description</h3>
+        <p>Creamy Homemade Hot Chocolate. A combination of cocoa powder and chocolate chips make this hot chocolate extra flavorful and delicious! Ready in minutes.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 cups milk</li>
+            <li>1/4 cup unsweetened cocoa powder</li>
+            <li>1/4 cup granulated sugar</li>
+            <li>1/2 cup bittersweet or semisweet chocolate chips or chopped chocolate bar</li>
+            <li>1/4 teaspoon pure vanilla extract</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Place milk, cocoa powder and sugar in a small saucepan.</li>
+            <li>Heat over medium/medium-low heat, whisking frequently, until warm (but not boiling)</li>
+            <li>Add chocolate chips and whisk constantly until the chocolate chips melt and distribute evenly into the milk</li>
+            <li>Whisk in vanilla extract and a pinch of salt (if desired), serve immediately</li>
+        </ol>
     </body>
 </html>
