--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="recipes/chicken-tikka-masala.html">Chicken Tikka Masala</a></li>
             <li><a href="recipes/dutch-babies.html">Dutch Babies</a></li>
+            <li><a href="recipes/hot-chocolate.html">Hot Chocolate</a></li>
         </ul>
     </body>
 </html>
